--- a/style.css
+++ b/style.css
@@ -64,3 +64,15 @@ th {
 .blue-line {
     background-color: #B1E5F2;
 }
+
+h3 {
+    color: grey;
+
+}
+
+
+.top-text {
+    position: relative;
+    text-align: center;
+    color: white;
+}
