--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     box-sizing: border-box;
@@ -10,16 +11,20 @@ header {
     background-repeat: repeat;
     height: 150px;
 }
+
 #logo {
+    margin-top: 100px;
     width: 200px;
 }
+
 /* /header */
 
 /*manifesto */
 
-h1 {
+ h1 {
     font-size: 40px;
 }
+
 #blue-write {
     color: #20A9E5;
 }
@@ -71,3 +76,21 @@ h3 {
 
 
 
+.footer-item {
+    width: 200px;
+    height 150px; 
+    margin-top: 1em;
+    padding: 1em;
+    color: white;
+}
+
+
+
+#computer {
+    background-image: url(img/monitor.jpg) ;
+}
+
+
+#graph {
+    background-image: url(img/graph.jpg);
+}
